build_output.txt
warning: rssn@0.1.19: Generated rssn.h
warning: rssn@0.1.19: Generated rssn.hpp
   Compiling rssn v0.1.19 (/home/pana/dev/rssn)
error[E0432]: unresolved import `crate::ffi_apis::utils`
 --> src/ffi_apis/symbolic_stats_probability_ffi/handle.rs:5:22
  |
5 | use crate::ffi_apis::utils::{c_str_to_str, str_to_c_char};
  |                      ^^^^^ could not find `utils` in `ffi_apis`

error[E0432]: unresolved import `crate::ffi_apis::utils`
 --> src/ffi_apis/symbolic_stats_probability_ffi/json.rs:5:22
  |
5 | use crate::ffi_apis::utils::{to_json_string, from_json_string}; // Assuming general utils exist
  |                      ^^^^^ could not find `utils` in `ffi_apis`

error[E0432]: unresolved import `crate::ffi_apis::utils`
 --> src/ffi_apis/symbolic_stats_probability_ffi/bincode_api.rs:5:22
  |
5 | use crate::ffi_apis::utils::{to_bincode_buffer, from_bincode_buffer, BincodeBuffer};
  |                      ^^^^^ could not find `utils` in `ffi_apis`

warning: unused import: `crate::symbolic::core::Expr`
 --> src/ffi_apis/symbolic_group_theory_ffi/json.rs:2:5
  |
2 | use crate::symbolic::core::Expr;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::collections::HashMap`
 --> src/ffi_apis/symbolic_group_theory_ffi/json.rs:4:5
  |
4 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::ffi::CStr`
 --> src/ffi_apis/symbolic_lie_groups_ffi/handle.rs:3:5
  |
3 | use std::ffi::CStr;
  |     ^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
 --> src/ffi_apis/symbolic_optimize_ffi/bincode_api.rs:4:5
  |
4 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::ffi::CStr`
 --> src/ffi_apis/symbolic_optimize_ffi/bincode_api.rs:5:5
  |
5 | use std::ffi::CStr;
  |     ^^^^^^^^^^^^^^

warning: unused import: `std::os::raw::c_char`
 --> src/ffi_apis/symbolic_optimize_ffi/bincode_api.rs:6:5
  |
6 | use std::os::raw::c_char;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
 --> src/ffi_apis/symbolic_optimize_ffi/json.rs:4:5
  |
4 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::ffi::CStr`
 --> src/ffi_apis/symbolic_optimize_ffi/json.rs:5:5
  |
5 | use std::ffi::CStr;
  |     ^^^^^^^^^^^^^^

warning: unused import: `CString`
 --> src/ffi_apis/symbolic_real_roots_ffi/json.rs:5:22
  |
5 | use std::ffi::{CStr, CString};
  |                      ^^^^^^^

warning: unused imports: `CStr` and `CString`
 --> src/ffi_apis/symbolic_stats_probability_ffi/handle.rs:6:16
  |
6 | use std::ffi::{CStr, CString};
  |                ^^^^  ^^^^^^^

warning: unused import: `std::os::raw::c_char`
 --> src/ffi_apis/symbolic_stats_probability_ffi/handle.rs:7:5
  |
7 | use std::os::raw::c_char;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::ffi::CStr`
 --> src/ffi_apis/symbolic_stats_probability_ffi/json.rs:8:5
  |
8 | use std::ffi::CStr; // Need CStr
  |     ^^^^^^^^^^^^^^

warning: unused import: `std::os::raw::c_char`
 --> src/ffi_apis/symbolic_stats_probability_ffi/bincode_api.rs:7:5
  |
7 | use std::os::raw::c_char; // Technically unused here but consistent with other files
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::ffi::CStr`
 --> src/ffi_apis/symbolic_topology_ffi/handle.rs:3:5
  |
3 | use std::ffi::CStr;
  |     ^^^^^^^^^^^^^^

warning: unused imports: `c_char` and `c_double`
 --> src/ffi_apis/symbolic_topology_ffi/handle.rs:4:20
  |
4 | use std::os::raw::{c_char, c_double, c_int};
  |                    ^^^^^^  ^^^^^^^^

warning: unused import: `Distribution`
 --> src/ffi_apis/symbolic_stats_probability_ffi/json.rs:1:35
  |
1 | use crate::symbolic::core::{Expr, Distribution};
  |                                   ^^^^^^^^^^^^

warning: unused import: `Distribution`
 --> src/ffi_apis/symbolic_stats_probability_ffi/bincode_api.rs:1:35
  |
1 | use crate::symbolic::core::{Expr, Distribution};
  |                                   ^^^^^^^^^^^^

warning: unused variable: `num`
   --> src/symbolic/complex_analysis.rs:159:22
    |
159 |     if let Expr::Div(num, den) = func {
    |                      ^^^ help: if this is intentional, prefix it with an underscore: `_num`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `integrand`
   --> src/symbolic/complex_analysis.rs:346:9
    |
346 |     let integrand = Expr::new_div(func.clone(), Expr::new_sub(z, z0.clone()));
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_integrand`

warning: unused variable: `q_poly_term`
   --> src/symbolic/integration.rs:165:9
    |
165 |     let q_poly_term = poly_mul_scalar_expr(&t_pow_n, &q_n);
    |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_q_poly_term`

warning: unused variable: `equation`
    --> src/symbolic/pde.rs:1144:31
     |
1144 | pub fn solve_wave_equation_3d(equation: &Expr, func: &str, vars: &[&str]) -> Option<Expr> {
     |                               ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_equation`

warning: unused variable: `equation`
    --> src/symbolic/pde.rs:1155:31
     |
1155 | pub fn solve_heat_equation_3d(equation: &Expr, func: &str, vars: &[&str]) -> Option<Expr> {
     |                               ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_equation`

warning: unused variable: `equation`
    --> src/symbolic/pde.rs:1166:34
     |
1166 | pub fn solve_laplace_equation_3d(equation: &Expr, func: &str, vars: &[&str]) -> Option<Expr> {
     |                                  ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_equation`

warning: unused variable: `equation`
    --> src/symbolic/pde.rs:1269:34
     |
1269 | pub fn solve_poisson_equation_3d(equation: &Expr, func: &str, vars: &[&str]) -> Option<Expr> {
     |                                  ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_equation`

For more information about this error, try `rustc --explain E0432`.
warning: `rssn` (lib) generated 24 warnings
warning: rssn@0.1.19: Generated rssn.h
warning: rssn@0.1.19: Generated rssn.hpp
error: could not compile `rssn` (lib) due to 3 previous errors; 24 warnings emitted
